<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_shop"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_you"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/you" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_category"
        android:enabled="true"
        android:title="@string/more" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_carts"
        android:enabled="true"
        android:title="@string/cart" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/baseline_menu_24"
        android:enabled="true"
        android:title="@string/menu" />
</menu>
