<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/profile_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="17dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/profile_picture_image_view"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="1dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />


            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_there"
                    android:textAlignment="textStart"
                    android:textColor="#424141"
                    android:textSize="12sp"
                    android:textStyle="bold">

                </TextView>


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/loading"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/logout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/baseline_logout_24"
                        android:text="@string/logout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.541"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name21">

                    </ImageView>

                    <TextView
                        android:id="@+id/name21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="19dp"
                        android:gravity="center"
                        android:text="@string/loading"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:id="@+id/search_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_layout">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_search_view"
                        android:iconifiedByDefault="false"
                        android:queryHint="@string/search_for_product"
                        android:searchHintIcon="@drawable/ic_category" />

                    <ImageView
                        android:id="@+id/filterIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/baseline_filter_alt_24" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/home_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/show_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:listitem="@layout/popular_row_item" />


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="180sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:visibility="gone"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="10dp">


                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/shimmer_view_container"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <ImageView
                                android:id="@+id/banner_imageview"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginEnd="0dp"
                                android:layout_marginBottom="0dp"
                                android:padding="1dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/profile" />

                        </com.facebook.shimmer.ShimmerFrameLayout>


                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/cat_recycler"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:listitem="@layout/category_row_item" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/seeAll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/popular_projects"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="15dp"
                                android:padding="8dp"
                                android:text="@string/see_all_"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                        </RelativeLayout>


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/productRecyclerView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/product_card_view" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewPopularBrands"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/latest_projects_"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textViewSeeAll"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="15dp"
                                android:padding="8dp"
                                android:text="@string/see_all_"
                                android:textColor="@color/black"
                                android:textStyle="bold" />

                        </RelativeLayout>


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/productRecyclerView3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/product_card_view" />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</RelativeLayout>